NXP-7797 Add detection of Client browser connectivity and skip Connect registration if needed

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
@@ -116,3 +116,11 @@ label.short.connectForm = Step 5
 label.short.connectFinish = Nuxeo Connect
 label.short.recapScreen = Summary
 label.short.reStarting = Restart
+label.short.networkBlocked = Network issue
+
+label.networkBlocked = Your browser does not have Internet access
+label.networkBlocked.description = Your browser does not seem to have Internet access.
+label.networkBlocked.text1 = This may be because of a missing http proxy configuration, security restriction or network configuration.
+label.networkBlocked.text2 = Without Internet access in your browser, you won't be able to complete the Connect registration.
+label.networkBlocked.text3 = If you can re-enable Internet access, please do it and click on the back button.
+label.networkBlocked.text4 = If you can not or don't want to re-enable Internet access, click continue, the Connect wizard will be skipped.
