--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
@@ -114,3 +114,12 @@ label.short.connectForm = \u00c9tape 5
 label.short.connectFinish = Nuxeo Connect
 label.short.recapScreen = R\u00e9sum\u00e9
 label.short.reStarting = Red\u00e9marrage
+label.short.networkBlocked = Probl\u00e8me r\u00e9seau
+
+label.networkBlocked = Votre navigateur n'a pas acc\u00e8s \u00e0 Internet
+label.networkBlocked.description = Votre navigateur ne semble pas avoir acc\u00e8s \u00e0 Internet
+label.networkBlocked.text1 = Cela peut \u00eatre du \u00e0 un r\u00e9glage manquant du proxy http, \u00e0 des restrictions de s\u00e9curit\u00e9 ou un r\u00e9glage r\u00e9seau.
+label.networkBlocked.text2 = Sans acc\u00e8s \u00e0 Internet vous ne pourrez pas compl\u00e9ter l'enregistrement Connect.
+label.networkBlocked.text3 = Si vous avez la possibilit\u00e9 de r\u00e9tablir l'acc\u00e8s Internet, cliquez sur Pr\u00e9c\u00e9dent pour r\u00e9essayer.
+label.networkBlocked.text4 = Si vous ne voulez pas ou ne pouvez pas, cliquez sur continuer, l'assistant Connect sera d\u00e9sactiv\u00e9.
+
