NXP-7794 Improve package selection system and add Preset system to make testing easier

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
@@ -130,7 +130,7 @@ label.networkBlocked.text4 = If you can not or don't want to re-enable Internet 
 label.packagesSelection = Select packages
 label.packagesSelection.description = Select here the features you would like to install with Nuxeo Platform.
 label.packagesSelection.explanations = Once installed you will be able to pull more features from Nuxeo MarketPlace.
-
+label.packagesSelection.presets = Presets
 
 label.packagesDownload = Packages download
 label.packagesDownload.description = You will download the packages needed for your installation.
