--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
@@ -128,6 +128,7 @@ label.networkBlocked.text4 = Si vous ne voulez pas ou ne pouvez pas, cliquez sur
 label.packagesSelection = S\u00e9lection des packages
 label.packagesSelection.description = S\u00e9lectioner les fonctionnalit\u00e9s que vous voulez dans votre installation de la plate-forme Nuxeo.
 label.packagesSelection.explanations = Après l'installation initiale, vous pourrez ajouter d'autres fonctionnali\u00e9s au travers de Nuxeo MarketPlace.
+label.packagesSelection.presets = Presets
 
 label.packagesDownload = T\u00e9l\u00e9chargement des packages
 label.packagesDownload.description = T\u00e9l\u00e9charger les packages correspondant à votre s\u00e9lection.
