NXP-7794 Cleanup and better CSS compatibility

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
@@ -131,6 +131,7 @@ label.packagesSelection = Select packages
 label.packagesSelection.description = Select here the features you would like to install with Nuxeo Platform.
 label.packagesSelection.explanations = Once installed you will be able to pull more features from Nuxeo MarketPlace.
 label.packagesSelection.presets = Presets
+label.packagesDownload.selectedPackages = Selected packages for your installation.
 
 label.packagesDownload = Packages download
 label.packagesDownload.description = You will download the packages needed for your installation.
