NXP-7809 Added property to disable update center if needed

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -313,3 +313,5 @@ label.userSession.requests=Accessed pages
 tab.themes.management=Themes
 label.themes.management.description=Nuxeo Theme is Nuxeo's online theme editor that enables you to edit, customize and create looks for your application.
 label.themes.management.editor=Launch Nuxeo Theme
+
+label.updatecenter.disabled=Update Center feature has been disabled by configuration on this Nuxeo instance.
