--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -314,3 +314,5 @@ label.userSession.requests=Pages acc\u00e9d\u00e9es
 tab.themes.management=Th\u00e8mes
 label.themes.management.description=Nuxeo Theme est l'\u00e9diteur de th\u00e8mes en ligne de Nuxeo, qui vous permet de personnaliser l'apparence de votre application en modifiant ou en cr\u00e9ant des th\u00e8mes.
 label.themes.management.editor=Lancer Nuxeo Theme
+
+label.updatecenter.disabled=La fonctionnalit\u00e9 Update Center a \u00e9t\u00e9 d\u00e9sactiv\u00e9e par configuration.
