NXP-7676: Migrate local theme feature to handle flavours instead of theme pages

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1798,9 +1798,14 @@ label.local.configuration.selection.availableUITypes=Existing types
 label.local.configuration.selection.selectedUITypes=Enabled types
 label.local.configuration.theme=Theme configuration
 label.local.configuration.theme.info=To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
+label.local.configuration.theme.flavorSelection=Flavor
+label.local.configuration.theme.flavorSelection.help=Refresh the page to see changes after saving.
 label.local.configuration.contentView=Documents content configuration
 label.local.configuration.contentView.info=To change one or more document content listing, click on the "Enable" button and select the ContentView you want to use.
 label.local.configuration.content.view.contentViewSelection=Bind document types and ContentView
+
+# default flavor label
+label.theme.flavor.nuxeo.default=Nuxeo theme
 
 # Html5 Dnd related labels
 label.import.and.add.to.clipboard = Import and add to Clipboard
